[package]
name = "cacher"
version = "0.3.0"
edition = "2021"
description = "A CLI tool for caching command outputs"
authors = ["Dean Shub"]
license = "MIT"
repository = "https://github.com/deanshub/cacher"
readme = "README.md"
keywords = ["cli", "cache", "command", "terminal", "utility"]
categories = ["command-line-utilities", "caching"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3"
regex = "1.10"
anyhow = "1.0"
tempfile = "3.8"
